# convex_decomposer

./: CMakeLists.txt
include/: cd_types.h  convex_decomposer.h
src/: convex_decomposer.cpp
